2013-01-16  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (gsa:param-or): Get the params out of the top-level
	params instead of looking in the collection _params.

2013-01-16  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (info/cpe, info/cve, info/ovaldef)
	(info/dfn_cert_adv): Remove action column centering to match other
	lists.

2013-01-16  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (html-create-note-form)
	(html-create-override-form): Correct envelope param name in list link.

2013-01-16  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/gsad.xsl (html-gsa-navigation): Add NVT to SecInfo menu.

	* src/html/omp.xsl (info/nvt, get_info_nvt_lnk, html-nvt-table): New
	templates.
	(get_info_response): Add NVT table.
	(get_nvts): Add list icon.

2013-01-16  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/omp.xsl (edit-settings-filter): Remove plural s for types.
	(get_my_settings): Show SecInfo filter.
	(edit_my_settings): Add SecInfo filter dropdown menu. Use plural form
	for types for consistency.

2013-01-16  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Update copyright dates and authors in heading comments of various files.

	* src/html/gsad.xsl: Update heading comment.

	* src/html/help.xsl: Update heading comment.

	* src/html/omp.xsl: Update heading comment.

2013-01-16  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Add views for DFN-CERT. Minor fixes in OVAL help and details view.

	* src/html/gsad.xsl: Add DFN-CERT Advisories item to SecInfo menu

	* src/html/help.xsl: Add help for DFN-CERT Advisories.
	Change OVAL help saying CVE where it should be OVAL Definitions.

	* src/html/omp.xsl: New templates for DFN-CERT advisory table and
	details views.
	Change linking of CVEs and CPEs in OVAL Definition Details to use
	use get_info_cve_lnk and get_info_cpe_lnk for consistency.

2013-01-15  Hani Benhabiles <hani.benhabiles@greenbone.net>
